--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base;
+@layer components {
+  .section-container {
+    @apply max-w-7xl mx-auto px-10;
+  }
 
-@apply{
-    .section-container{
-        
-    }
-    .section-content{
-
-    }
-    .button-container{
-        
-    }
+  .button-container {
+    @apply flex gap-4;
+  }
 }
